# gpbr

./: .spellcheck.yaml  README.md  main.py  presentation.tex  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pr-spell-checker.yaml  pr-unit-tests.yaml
animation/: gp_generation.html  gp_half_and_hafl.html
gpbr/: collocation_points.ipynb  main.py  polinomials_2d.ipynb  polinomials_3d.ipynb  requirements.txt
gpbr/gp/: algorithms.py  common.py  evaluators.py  funcs.py  operators.py  simplyfications.py
mfs/: boundary.py  collocation.py
notebooks/: 2d_2_logbook.pkl  collocation_points.ipynb  compare_mat_operations.ipynb  compare_mat_operations_debug.ipynb  direct_2d_comparing.ipynb  direct_2d_comparing_new.ipynb  direct_2d_debugging.ipynb  direct_2d_testing.ipynb  direct_problem_2d.ipynb  direct_problem_3d_new.ipynb  fs3d_diff.ipynb  fs_diff.ipynb  gpbr_2d.ipynb  gpbr_2d_mat.ipynb  gpbr_2d_mat_2pi_periodic.ipynb  gpbr_2d_non_radial.ipynb  gpbr_2d_parallel.ipynb  gpbr_3d.ipynb  gpbr_3d_mat.ipynb  inverse_2d_mat_compare.ipynb  non_radial_function.ipynb  polinomials_3d.ipynb  ray_expiriment.ipynb  sympy_fs_3d.ipynb  sympy_normals.ipynb  test_func_generation.ipynb  test_polinomials.ipynb  testing_new_structute.ipynb
scripts/: mfs_polinomial_3d.m  test_points.m
tests/: test_boundary.py  test_collocation.py  test_common.py  test_distance.py  test_evaluate_subtrees.py  test_fundamental_sequence.py  test_head_equation.py  test_heat_equation.py  test_operators.py  test_pickable.py  test_polynomial.py  test_simplifications.py  test_source.py
(+35 files in other folders)
